--- a/tox.ini
+++ b/tox.ini
@@ -15,6 +15,7 @@ passenv =
     LINT
     GOPATH
     GOCACHE
+    KOTLIN_HOME
 deps =
     git+https://github.com/zuo/unittest_expander
     pytest-cov
