--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ on:
 
 env:
   # Can be blank, or one of: cpp, dart, go, julia, kotlin, nim, smt, vlang
-  FOCUS: ''
+  FOCUS: 'smt'
 jobs:
   build:
 
@@ -137,6 +137,7 @@ jobs:
           elif [ "$RUNNER_OS" == "Windows" ]; then
               choco install astyle awk curl llvm zip
           fi
+          echo "WHICH_CLJSTYLE=$(which cljstyle 2>/dev/null)" >> $GITHUB_ENV
           echo "WHICH_KSCRIPT=$(which kscript 2>/dev/null)" >> $GITHUB_ENV
           echo "WHICH_KTLINT=$(which ktlint 2>/dev/null)" >> $GITHUB_ENV
           echo "WHICH_V=$(which v 2>/dev/null)" >> $GITHUB_ENV
@@ -219,15 +220,13 @@ jobs:
         run: cargo install cargo-script
 
       - name: Install smt dependencies
-        if: ${{ matrix.os == 'ubuntu-22.04' && (!env.FOCUS || env.FOCUS == 'smt') }}
+        if: ${{ !env.WHICH_CLJSTYLE && (!env.FOCUS || env.FOCUS == 'smt') }}
         shell: bash
         run: |
-          if [ "$RUNNER_OS" == "Linux" ]; then
-            (curl -sLO https://raw.githubusercontent.com/greglook/cljstyle/main/script/install-cljstyle
-             sed -i.bak 's/--overwrite//' install-cljstyle
-             chmod +x install-cljstyle
-             sudo ./install-cljstyle)
-          fi
+          curl -sLO https://raw.githubusercontent.com/greglook/cljstyle/main/script/install-cljstyle
+          sed -i.bak 's/--overwrite//' install-cljstyle
+          chmod +x install-cljstyle
+          sudo ./install-cljstyle
 
       - name: Run tox
         shell: bash
