--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ on:
 
 env:
   # Can be blank, or one of: cpp, dart, go, julia, kotlin, nim, smt, vlang
-  FOCUS: 'smt'
+  FOCUS: ''
 jobs:
   build:
 
