--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,8 +22,8 @@ jobs:
         python-version: [ '3.8' ]
         os:
           - ubuntu-22.04
-          - macos-12
-          - windows-2022
+          # macos-12
+          # windows-2022
     runs-on: ${{ matrix.os }}
 
     steps:
@@ -132,8 +132,8 @@ jobs:
                   zip \
                 && true
 
-              mkdir -p /usr/local/bin/
-              echo /usr/local/bin/ >> $GITHUB_PATH
+              mkdir -p /tmp/bin/
+              echo /tmp/bin/ >> $GITHUB_PATH
               echo "/C/Program Files/LLVM/bin" >> $GITHUB_PATH
               echo "/c/msys64/usr/bin" >> $GITHUB_PATH
 
@@ -172,7 +172,7 @@ jobs:
           if [ "$RUNNER_OS" == "Windows" ]; then
             mv ktlint ktlint.jar
             warp4j --windows --java-version 15 --no-optimize ktlint.jar
-            mv warped/ktlint-windows-x64.exe /usr/local/bin/ktlint.exe
+            mv warped/ktlint-windows-x64.exe /tmp/bin/ktlint.exe
             ktlint --help
           else
             chmod a+x ktlint
@@ -232,7 +232,7 @@ jobs:
           curl -sLO https://github.com/greglook/cljstyle/releases/download/$CLJSTYLE_VERSION/cljstyle-$CLJSTYLE_VERSION.jar
           mv cljstyle-$CLJSTYLE_VERSION.jar cljstyle.jar
           warp4j --windows --java-version 15 --no-optimize cljstyle.jar
-          mv warped/cljstyle-windows-x64.exe /usr/local/bin/cljstyle.exe
+          mv warped/cljstyle-windows-x64.exe /tmp/bin/cljstyle.exe
           cljstyle --help
 
       - name: Run tox
