--- a/.github/workflows/cpp.yml
+++ b/.github/workflows/cpp.yml
@@ -30,9 +30,9 @@ jobs:
           - g++-10
           - g++-11
           - g++-12
-          - clang-11
-          - clang-12
-          - clang-13
+          # clang-11
+          # clang-12
+          # clang-13
           - clang-14
 
     runs-on: ${{ matrix.os }}
