--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -84,11 +84,6 @@ jobs:
             (cd /usr/local/bin && sudo ln -fs $HOME/go/bin/golint)
           fi
 
-      - name: Install tox
-        run: |
-          pip3 --version
-          pip3 install setuptools tox
-
       - name: Install Julia packages
         if: ${{ !env.FOCUS || env.FOCUS == 'julia' }}
         shell: bash
@@ -102,28 +97,54 @@ jobs:
         shell: bash
         run: |
           set -ex
+          pip3 --version
           if [ "$RUNNER_OS" == "Linux" ]; then
               sudo apt-get install --yes \
                   astyle \
                   catch2 \
                   clang-14 \
+                  libc++-14-dev \
+                  libc++abi-14-dev \
+                  tox \
                   z3 \
                 && true
+              pip3 install conan
               echo "CXX=clang++-14" >> $GITHUB_ENV
               curl -sSLO https://github.com/pinterest/ktlint/releases/download/0.41.0/ktlint
               chmod a+x ktlint
               sudo mv ktlint /usr/local/bin/
           elif [ "$RUNNER_OS" == "macOS" ]; then
               brew tap holgerbrandl/tap https://github.com/holgerbrandl/homebrew-tap
-              brew install astyle catch2 clang-format cljstyle kscript ktlint z3
+              brew install \
+                  astyle \
+                  catch2 \
+                  clang-format \
+                  cljstyle \
+                  conan \
+                  kscript \
+                  ktlint \
+                  tox \
+                  z3 \
+                && true
               # brew's vlang 0.2.4 is too old, and has no @head
           elif [ "$RUNNER_OS" == "Windows" ]; then
-              choco install zip curl astyle llvm
-              git clone --depth 1 https://github.com/catchorg/Catch2 Catch2-repo
-              mv Catch2-repo/src/catch2 .
+              choco install \
+                  astyle \
+                  conan \
+                  curl \
+                  llvm \
+                  zip \
+                && true
+              pip3 install tox
           fi
           echo "WHICH_KSCRIPT=$(which kscript 2>/dev/null)" >> $GITHUB_ENV
           echo "WHICH_V=$(which v 2>/dev/null)" >> $GITHUB_ENV
+
+      - name: Install C++ packages
+        if: ${{ !env.FOCUS || env.FOCUS == 'cpp' }}
+        run: |
+          conan download cppitertools/2.1@:5ab84d6acfe1f23c4fae0ab88f26e3a396351ac9
+          conan download catch2/3.0.1@:a25d6c83542b56b72fdaa05a85db5d46f5f0f71c
 
       - name: Install V
         if: ${{ !env.WHICH_V && (!env.FOCUS || env.FOCUS == 'vlang') }}
