--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,6 +54,11 @@ test = true
 path = "tests/expected/built_ins.rs"
 
 [[bin]]
+name = "cast"
+test = true
+path = "tests/expected/cast.rs"
+
+[[bin]]
 name = "cls"
 test = true
 path = "tests/expected/cls.rs"
