--- a/tox.ini
+++ b/tox.ini
@@ -19,6 +19,7 @@ passenv =
 deps =
     git+https://github.com/zuo/unittest_expander
     pytest-cov
+    jgo
     black
     astpretty
     toposort
