--- a/tox.ini
+++ b/tox.ini
@@ -19,6 +19,7 @@ passenv =
 deps =
     git+https://github.com/zuo/unittest_expander
     pytest-cov
+    git+https://github.com/jayvdb/jgo@argparse_program_args
     black
     astpretty
     toposort
